force-app/main/default/objects/Delivery_Line_Item__c/Delivery_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Line Item</label>
    <nameField>
        <displayFormat>DLI -{0000}</displayFormat>
        <label>Delivery Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>