force-app/main/default/objects/Delivery_Line_Item__c/fields/Cart_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Cart_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Line Item</label>
    <referenceTo>Cart_Line_Item__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>