force-app/main/default/objects/Delivery_Line_Item__c/fields/Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Quantity__c</fullName>
    <label>Delivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>