force-app/main/default/objects/Delivery_Line_Item__c/fields/Delivery_Group__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Group__c</fullName>
    <label>Delivery Plan</label>
    <referenceTo>Delivery_Group__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>