force-app/main/default/objects/Delivery_Line_Item__c/fields/Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Quantity__c</fullName>
    <label>Ordered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>