force-app/main/default/objects/Delivery_Line_Item__c/fields/Sales_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>