force-app/main/default/objects/Delivery_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cart_Line_Item__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Delivery_Group__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Quantity__c</columns>
    <columns>Sales_Order_Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>